--- a/hola.html
+++ b/hola.html
@@ -13,6 +13,12 @@
     <h3>Tercero</h3>
 <P>Me llamo anto y tengo 15 años</P>
 
-<a href="https://www.google.com"></a>
+<a href="https://www.google.com">Google</a>
+<img src="https://images.unsplash.com/photo-1543466835-00a7907e9de1?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8cGVycm98ZW58MHx8MHx8fDA%3D" alt="Perrito imagen">
+<ul>Lista de compras: 
+    Album de Stray Kids "HOP limited version"
+    Chocolate
+    Labial Dior
+</ul>
 </body>
 </html>
