--- a/hola.html
+++ b/hola.html
@@ -8,17 +8,31 @@
 </head>
 <body>
     <h1>¡Hola mundooo!</h1>
-    <h1>Primero</h1>
-    <h2>Segundo</h2>
-    <h3>Tercero</h3>
+    <ol>
+    <li>primero</li> 
+    <li>segundo</li>
+    <li>tercero</li>
+</ol>
 <P>Me llamo anto y tengo 15 años</P>
 
 <a href="https://www.google.com">Google</a>
 <img src="https://images.unsplash.com/photo-1543466835-00a7907e9de1?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Nnx8cGVycm98ZW58MHx8MHx8fDA%3D" alt="Perrito imagen">
 <ul>Lista de compras: 
-    Album de Stray Kids "HOP limited version"
-    Chocolate
-    Labial Dior
+    <li>de Stray Kids "HOP limited version"</li> 
+    <li>Chocolate</li> 
+    <li>Labial Dior</li> 
 </ul>
+<ol>Lista de actividades:
+    Hacer una torta
+    Ir a baile
+    Salir con mis amigas
+</ol>
+<p><b>El k-pop<p>
+    <p><i>Es un genero musical coreano, el cual tiene 5 generaciones, que comienzan <b>desde 1990</b> hasta ahora en la actualidad. Mi grupo favorito se llama <b>Stray Kids</b>, y mi bias es Hwang Hyunjin. Te estaras preguntado que es un bias. Bias es la palabra que se utiliza dentro del kpop para referirse al integrante masculino o femenino que más te gusta del grupo. Los grupos no son mixtos ya que se dividen en, grupos femeninos y masculinos, creo que solo hay un grupo mixto y se llama Kard.</i> </p>
+
+<p><br>La danza o el baile es un arte donde se utiliza el movimiento del cuerpo, normalmente con música, como una forma de expresión y de interacción social con fines de entretenimiento y artísticos.
+    Es el movimiento estático y en desplazamiento que sucede en el espacio y el tiempo que se realiza con una parte y todo el cuerpo del ejecutante, con cierto compás o ritmo como expresión de sentimientos individuales o de símbolos de la cultura y la sociedad. La danza también es una forma de comunicación. Se usa el lenguaje no verbal entre los seres humanos donde el bailarín o bailarina expresa sentimientos y emociones a través de gestos y movimientos. Se realiza mayormente con música, ya sea una canción, pieza musical o tonos.</p>
+
+<p></p>
 </body>
 </html>
